--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -1,8 +1,8 @@
-name: Esegui Gen.py ogni ora
+name: Esegui Def.py ogni ora
 on:
   schedule:
-    - cron: '0 * * * *'  # Esegue ogni 30 minuti
-  workflow_dispatch:  # Permette di eseguire manualmente
+    - cron: '0 * * * *'  # Esegue ogni ora allo scoccare dell'ora
+  workflow_dispatch:  # Permette di avviare manualmente il workflow
 
 permissions:
   contents: write  # Permette di fare commit e push nel repository
@@ -17,20 +17,25 @@ jobs:
       - name: Imposta Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.x'  # Sostituisci con la versione necessaria
+          python-version: '3.x'  # Puoi specificare una versione esatta, es. '3.10'
 
       - name: Installa le dipendenze
         run: pip install requests
 
       - name: Esegui lo script
-        run: python def.py
+        run: python def.py  # Usa il file corretto
 
-      - name: Aggiungi il file generato al commit
+      - name: Configura Git
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
-          git add .
-          git commit -m "Aggiungi file generato channels_italy"
 
-      - name: Pusha il cambiamento
-        run: git push
+      - name: Aggiungi il file generato al commit
+        run: |
+          git add .
+          git commit -m "Aggiornamento automatico di channels_italy" || true  # Evita errori se non ci sono modifiche
+
+      - name: Effettua il push con merge dei cambiamenti
+        run: |
+          git pull --rebase  # Evita conflitti con modifiche remote
+          git push
