--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -35,8 +35,10 @@ jobs:
           git add .
           git commit -m "Aggiornamento automatico di channels_italy" || true  # Evita errori se non ci sono modifiche
 
-      - name: Effettua il push con merge dei cambiamenti
+      - name: Recupera aggiornamenti remoti
         run: |
-          git fetch origin  # Recupera gli aggiornamenti dal remoto senza modificarlo
-          git reset --hard origin/main  # Resetta il branch locale alla versione remota
-          git push origin main  # Fai il push dei cambiamenti locali
+          git fetch origin  # Recupera gli aggiornamenti senza modificarli
+          git pull origin main  # Integra i cambiamenti remoti con il tuo branch
+
+      - name: Effettua il push
+        run: git push origin main  # Esegui il push delle modifiche locali
