--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -1,8 +1,9 @@
-name: Esegui Def.py ogni ora
+name: Esegui Gen.py ogni 30 minuti
+
 on:
   schedule:
-    - cron: '0 * * * *'  # Esegue ogni ora allo scoccare dell'ora
-  workflow_dispatch:  # Permette di avviare manualmente il workflow
+    - cron: '0 * * * *'  # Esegue ogni 30 minuti
+  workflow_dispatch:  # Permette di eseguire manualmente
 
 permissions:
   contents: write  # Permette di fare commit e push nel repository
@@ -17,28 +18,20 @@ jobs:
       - name: Imposta Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.x'  # Puoi specificare una versione esatta, es. '3.10'
+          python-version: '3.x'  # Sostituisci con la versione necessaria
 
       - name: Installa le dipendenze
         run: pip install requests
 
       - name: Esegui lo script
-        run: python def.py  # Usa il file corretto
-
-      - name: Configura Git
-        run: |
-          git config --global user.name "GitHub Actions"
-          git config --global user.email "actions@github.com"
+        run: python def.py
 
       - name: Aggiungi il file generato al commit
         run: |
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
           git add .
-          git commit -m "Aggiornamento automatico di channels_italy" || true  # Evita errori se non ci sono modifiche
+          git commit -m "Aggiungi file generato channels_italy"
 
-      - name: Recupera aggiornamenti remoti
-        run: |
-          git fetch origin  # Recupera gli aggiornamenti senza modificarli
-          git pull origin main  # Integra i cambiamenti remoti con il tuo branch
-
-      - name: Effettua il push
-        run: git push origin main  # Esegui il push delle modifiche locali
+      - name: Pusha il cambiamento
+        run: git push
