--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -1,4 +1,4 @@
-name: Esegui def.py ogni ora
+name: Esegui Gen.py ogni ora
 
 on:
   schedule:
@@ -32,16 +32,15 @@ jobs:
         run: python def.py  # Assicurati che il file sia corretto
 
       - name: Verifica modifiche
-        run: |
-          git status
-          git diff --quiet || echo "Ci sono modifiche"
+        run: git status  # Controlla lo stato del repository
 
-      - name: Aggiungi il file generato al commit
+      - name: Aggiungi il file generato al commit (se ci sono modifiche)
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
           git add .
-          git commit --allow-empty -m "Aggiungi file generato channels_italy" || echo "Nessuna modifica da committare"
+          git diff --quiet && echo "Nessuna modifica da committare" || git commit -m "Aggiungi file generato channels_italy"
 
-      - name: Pusha il cambiamento
-       
+      - name: Pusha il cambiamento (se necessario)
+        run: |
+          git diff --quiet && echo "Nessuna modifica da pushare" || git push
