update.yml aktualisieren

--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -23,6 +23,7 @@ jobs:
 
       - name: Installa le dipendenze
         run: pip install requests
+        run: pip install fuzzywuzzy
 
       - name: Esegui lo script
         run: python def.py
