--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -23,6 +23,8 @@ jobs:
 
       - name: Installa le dipendenze
         run: pip install requests
+
+      - name: Installa fuzzywuzzy
         run: pip install fuzzywuzzy
 
       - name: Esegui lo script
