update.yml aktualisieren

--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -27,6 +27,9 @@ jobs:
       - name: Installa fuzzywuzzy
         run: pip install fuzzywuzzy
 
+      - name: Installa leven
+        run: pip install python-Levenshtein
+
       - name: Esegui lo script
         run: python def.py
 
