update.yml aktualisieren

--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -24,6 +24,9 @@ jobs:
       - name: Installa le dipendenze
         run: pip install requests
 
+      - name: installa xmltodict
+        run: pip install xmltodict
+
       - name: Esegui lo script
         run: python def.py
 
