--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -1,4 +1,3 @@
-
 name: Esegui def.py ogni ora
 
 on:
@@ -33,12 +32,14 @@ jobs:
       - name: Esegui lo script
         run: python def.py
 
-      - name: Aggiungi il file generato al commit
+      - name: Controlla se il file è stato generato
         run: |
-          git config --global user.name "GitHub Actions"
-          git config --global user.email "actions@github.com"
-          git add .
-          git commit -m "Aggiungi file generato channels_italy"
-
-      - name: Pusha il cambiamento
-        run: git push
+          if [ -f "channels_italy.m3u8" ]; then
+              git config --global user.name "GitHub Actions"
+              git config --global user.email "actions@github.com"
+              git add channels_italy.m3u8
+              git commit -m "Aggiungi file generato channels_italy"
+              git push
+          else
+              echo "Il file channels_italy.m3u8 non è stato creato, nessuna modifica da committare."
+          fi
