--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -21,25 +21,28 @@ jobs:
           python-version: '3.x'  # Sostituisci con la versione necessaria
 
       - name: Installa le dipendenze
-        run: pip install requests
-
-      - name: installa fuzzywuzzy
-        run: pip install fuzzywuzzy
-
-      - name: installa python-Levenshtein
-        run: pip install python-Levenshtein
+        run: pip install requests fuzzywuzzy python-Levenshtein
 
       - name: Esegui lo script
         run: python def.py
 
-      - name: Controlla se il file è stato generato
+      - name: Verifica se channels_italy.m3u8 è stato generato
         run: |
           if [ -f "channels_italy.m3u8" ]; then
-              git config --global user.name "GitHub Actions"
-              git config --global user.email "actions@github.com"
-              git add channels_italy.m3u8
-              git commit -m "Aggiungi file generato channels_italy"
-              git push
+            echo "Il file channels_italy.m3u8 è stato generato."
           else
-              echo "Il file channels_italy.m3u8 non è stato creato, nessuna modifica da committare."
+            echo "Il file channels_italy.m3u8 non esiste. Esco."
+            exit 0  # Esci senza fare commit o push
           fi
+
+      - name: Aggiungi il file generato al commit
+        run: |
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
+          git add .
+          git commit -m "Aggiungi file generato channels_italy"
+        continue-on-error: true  # In caso non ci siano cambiamenti, non fallire
+
+      - name: Pusha il cambiamento
+        run: git push
+        if: success()  # Esegui solo se il commit è riuscito
