--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -3,10 +3,10 @@ name: Esegui def.py ogni ora
 on:
   schedule:
     - cron: '0 * * * *'  # Esegue ogni ora
-  workflow_dispatch:  # Permette esecuzione manuale
+  workflow_dispatch:  # Permette di eseguire manualmente
 
 permissions:
-  contents: write  # Permette commit e push
+  contents: write  # Permette di fare commit e push nel repository
 
 jobs:
   run-script:
@@ -26,28 +26,23 @@ jobs:
       - name: Esegui lo script
         run: python def.py
 
-      - name: Verifica se sono stati generati file M3U8
+      - name: Verifica se channels_italy.m3u8 è stato generato
         run: |
-          if ls output_m3u8/*.m3u8 1> /dev/null 2>&1; then
-            echo "File M3U8 trovati."
+          if [ -f "channels_italy.m3u8" ]; then
+            echo "Il file channels_italy.m3u8 è stato generato."
           else
-            echo "Nessun file M3U8 generato. Esco."
-            exit 0  # Esce senza fare commit o push
+            echo "Il file channels_italy.m3u8 non esiste. Esco."
+            exit 0  # Esci senza fare commit o push
           fi
 
-      - name: Configura Git
+      - name: Aggiungi il file generato al commit
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
+          git add .
+          git commit -m "Aggiungi file generato channels_italy"
+        continue-on-error: true  # In caso non ci siano cambiamenti, non fallire
 
-      - name: Aggiungi e committa i file generati
-        run: |
-          git add output_m3u8/*.m3u8
-          if git diff --cached --quiet; then
-            echo "Nessun cambiamento da committare."
-            exit 0
-          fi
-          git commit -m "Aggiornati file M3U8"
-
-      - name: Pusha le modifiche
+      - name: Pusha il cambiamento
         run: git push
+        if: success()  # Esegui solo se il commit è riuscito
