--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -21,7 +21,7 @@ jobs:
           python-version: '3.x'  # Sostituisci con la versione necessaria
 
       - name: Installa le dipendenze
-        run: pip install requests fuzzywuzzy python-Levenshtein beautifulsoup4 lxml
+        run: pip install requests rapidfuzz fuzzywuzzy python-Levenshtein beautifulsoup4 lxml
 
       - name: Esegui lo script
         run: python def.py
