--- a/config.json
+++ b/config.json
@@ -1532,7 +1532,7 @@
     {
         "tvg-name": "HISTORY",
         "tvg-id": "",
-        "tvg-icon": "https://upload.wikimedia.org/wikipedia/commons/f/f5/History_Logo.svg"https://upload.wikimedia.org/wikipedia/commons/f/f5/History_Logo.svg
+        "tvg-icon": "https://upload.wikimedia.org/wikipedia/commons/f/f5/History_Logo.svg"
     },
     {
         "tvg-name": "DISCOVERY CHANNEL",
