--- a/config.json
+++ b/config.json
@@ -431,17 +431,17 @@
     },
     {
         "tvg-name": "DAZN 2",
-        "tvg-id": "",
+        "tvg-id": "Dazn 2.it",
         "tvg-icon": "https://upload.wikimedia.org/wikipedia/commons/thumb/d/d6/Dazn-logo.png/481px-Dazn-logo.png"
     },
     {
         "tvg-name": "DAZN 1",
-        "tvg-id": "",
+        "tvg-id": "Dazn 1.it",
         "tvg-icon": "https://upload.wikimedia.org/wikipedia/commons/thumb/d/d6/Dazn-logo.png/481px-Dazn-logo.png"
     },
     {
         "tvg-name": "ZONA DAZN",
-        "tvg-id": "",
+        "tvg-id": "DAZN 1.it",
         "tvg-icon": "https://upload.wikimedia.org/wikipedia/commons/thumb/d/d6/Dazn-logo.png/481px-Dazn-logo.png"
     },
     {
