--- a/.github/workflows/eventi.yml
+++ b/.github/workflows/eventi.yml
@@ -26,12 +26,12 @@ jobs:
       - name: Esegui lo script
         run: python eventi.py
 
-      - name: Verifica se channels_italy.m3u8 è stato generato
+      - name: Verifica se events.m3u8 è stato generato
         run: |
-          if [ -f "channels_italy.m3u8" ]; then
-            echo "Il file channels_italy.m3u8 è stato generato."
+          if [ -f "events.m3u8" ]; then
+            echo "Il file events.m3u8 è stato generato."
           else
-            echo "Il file channels_italy.m3u8 non esiste. Esco."
+            echo "Il file events.m3u8 non esiste. Esco."
             exit 0  # Esci senza fare commit o push
           fi
 
@@ -40,7 +40,7 @@ jobs:
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
           git add .
-          git commit -m "Aggiungi file generato channels_italy"
+          git commit -m "Aggiungi file generato events"
         continue-on-error: true  # In caso non ci siano cambiamenti, non fallire
 
       - name: Pusha il cambiamento
