--- a/.github/workflows/events.yml
+++ b/.github/workflows/events.yml
@@ -21,7 +21,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python -m pip install requests pytz bs4 chardet fetcher
+          python -m pip install requests pytz bs4 chardet
           
       - name: Run EPG grabber script
         env:
