--- a/.github/workflows/eventi.yml
+++ b/.github/workflows/eventi.yml
@@ -26,7 +26,7 @@ jobs:
           pip install requests
 
       - name: Esegui lo script
-        run: python script.py
+        run: python eventi.py
 
       - name: Verifica se eventi.m3u8 è stato generato
         run: |
