--- a/.github/workflows/UpdateItaEvents.yml
+++ b/.github/workflows/UpdateItaEvents.yml
@@ -32,10 +32,14 @@ jobs:
           rm -f daddyliveSchedule.json
           python itaevents.py
           
-      - name: Force commit and push the changes (no history)
+      - name: Aggiungi il file generato al commit
         run: |
-          git config --global user.name "actions-user"
+          git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
           git add .
-          git commit -m "Update Ita and Events 3h"
-          git push --force
+          git commit -m "Aggiornamento lista eventi"
+        continue-on-error: true
+
+      - name: Pusha il cambiamento
+        run: git push
+        if: success()
