--- a/.github/workflows/UpdateItaEvents.yml
+++ b/.github/workflows/UpdateItaEvents.yml
@@ -1,3 +1,4 @@
+
 name: Update Events
 
 on:
@@ -30,16 +31,13 @@ jobs:
           M3U4U_EPG: ${{ secrets.M3U4U_EPG }}
         run: |
           rm -f daddyliveSchedule.json
+          rm -f 247channels.html
           python itaevents.py
           
-      - name: Aggiungi il file generato al commit
+      - name: Force commit and push the changes (no history)
         run: |
-          git config --global user.name "GitHub Actions"
+          git config --global user.name "actions-user"
           git config --global user.email "actions@github.com"
           git add .
-          git commit -m "Aggiornamento lista eventi"
-        continue-on-error: true
-
-      - name: Pusha il cambiamento
-        run: git push
-        if: success()
+          git commit -m "Update Ita and Events 3h"
+          git push --force
