--- a/.github/workflows/UpdateItaEvents.yml
+++ b/.github/workflows/UpdateItaEvents.yml
@@ -1,10 +1,12 @@
-
 name: Update Events
 
 on:
   schedule:
     - cron: "0 */3 * * *" # ogni 3 ore
   workflow_dispatch:
+
+permissions:
+  contents: write
 
 jobs:
   update-files:
@@ -38,6 +40,7 @@ jobs:
         run: |
           git config --global user.name "actions-user"
           git config --global user.email "actions@github.com"
+          git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/realbestia/itatv.git
           git add .
           git commit -m "Update Ita and Events 3h"
           git push --force
