--- a/.github/workflows/eventi.yml
+++ b/.github/workflows/eventi.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Verifica se eventi.m3u8 è stato generato
         run: |
-          if [ -f "channels_italy.m3u8" ]; then
+          if [ -f "eventi.m3u8" ]; then
             echo "Il file eventi.m3u8 è stato generato."
           else
             echo "Il file eventi.m3u8 non esiste. Esco."
