eventi.yml aktualisieren

--- a/.github/workflows/eventi.yml
+++ b/.github/workflows/eventi.yml
@@ -1,9 +1,9 @@
 
-name: Esegui eventi.py ogni 2 ore
+name: Esegui eventi.py ogni ora
 
 on:
   schedule:
-    - cron: '0 */2 * * *'  # Esegue ogni 2 ore
+    - cron: '0 * * * *'  # Esegue ogni ora
   workflow_dispatch:  # Permette di eseguire manualmente
 
 permissions:
