--- a/.github/workflows/eventi.yml
+++ b/.github/workflows/eventi.yml
@@ -3,7 +3,7 @@ name: Esegui eventi.py ogni ora
 
 on:
   schedule:
-    - cron: '0 * * * *'  # Esegue ogni ora
+    - cron: '0 */2 * * *'  # Esegue ogni ora
   workflow_dispatch:  # Permette di eseguire manualmente
 
 permissions:
