--- a/.github/workflows/epg.yml
+++ b/.github/workflows/epg.yml
@@ -2,7 +2,7 @@ name: Esegui epg.py ogni ora
 
 on:
   schedule:
-    - cron: '0 * * * *'  # Esegue ogni ora
+    - cron: '0 */4 * * *'  # Esegue ogni ora
   workflow_dispatch:  # Permette di eseguire manualmente
 
 permissions:
