--- a/.github/workflows/epg.yml
+++ b/.github/workflows/epg.yml
@@ -1,8 +1,8 @@
-name: Esegui epg.py ogni ora
+name: Esegui epg.py ogni 3 ore
 
 on:
   schedule:
-    - cron: '45 */3 * * *'  # Esegue ogni 3 ore
+    - cron: '45 */3 * * *'  # Esegue ogni 3 ore al minuto 45
   workflow_dispatch:  # Permette di eseguire manualmente
 
 permissions:
@@ -21,27 +21,27 @@ jobs:
           python-version: '3.x'  # Sostituisci con la versione necessaria
 
       - name: Installa le dipendenze
-        run: pip install requests
+        run: pip install requests  # xml.etree.ElementTree è parte della libreria standard
 
       - name: Esegui lo script
         run: python epg.py
 
-      - name: Verifica se epg.gz è stato generato
+      - name: Verifica se epg.xml e epg.gz sono stati generati
         run: |
-          if [ -f "epg.gz" ]; then
-            echo "Il file epg.gz è stato generato."
+          if [ -f "epg.xml" ] && [ -f "epg.gz" ]; then
+            echo "File epg.xml e epg.gz generati correttamente."
           else
-            echo "Il file epg.gz non esiste. Esco."
+            echo "Uno o entrambi i file non esistono. Esco."
             exit 0  # Esci senza fare commit o push
           fi
 
-      - name: Aggiungi il file generato al commit
+      - name: Aggiungi i file generati al commit
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
-          git add .
-          git commit -m "Aggiungi file generato epg"
-        continue-on-error: true  # In caso non ci siano cambiamenti, non fallire
+          git add epg.xml epg.gz
+          git commit -m "Aggiornamento epg.xml e epg.gz"
+        continue-on-error: true  # Evita errori se non ci sono modifiche
 
       - name: Pusha il cambiamento
         run: git push
