--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Checkout del repository
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0  # Scarica tutta la cronologia per evitare problemi con il rebase
+          fetch-depth: 0  # Scarica tutta la cronologia
 
       - name: Imposta Python
         uses: actions/setup-python@v4
@@ -42,8 +42,16 @@ jobs:
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
 
+      - name: Stash delle modifiche locali (se presenti)
+        run: |
+          git diff --quiet || git stash
+
       - name: Scarica le ultime modifiche dal repository remoto
         run: git pull --rebase origin main
+
+      - name: Ripristina le modifiche stashed (se presenti)
+        run: |
+          git stash list | grep -q "stash@{0}" && git stash pop || echo "Nessuna modifica da ripristinare"
 
       - name: Aggiungi il file generato al commit
         run: |
