--- a/.github/workflows/eventsextract.yml
+++ b/.github/workflows/eventsextract.yml
@@ -28,11 +28,14 @@ jobs:
       - name: Run extraction script
         run: python enevtsextract.py
       
-      - name: Commit and push if changes
+      - name: Aggiungi il file generato al commit
         run: |
-          git config --global user.name 'GitHub Actions Bot'
-          git config --global user.email 'actions@github.com'
-          # Add JSON files
-          git add daddyliveSchedule.json
-          git status
-          git diff --quiet && git diff --staged --quiet || (git commit -m "Update schedule data [skip ci]" && git push)
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
+          git add .
+          git commit -m "Aggiungi file generato daddyliveSchedule"
+        continue-on-error: true  # In caso non ci siano cambiamenti, non fallire
+
+      - name: Pusha il cambiamento
+        run: git push
+        if: success()  # Esegui solo se il commit è riuscito
