--- a/.github/workflows/eventsextract.yml
+++ b/.github/workflows/eventsextract.yml
@@ -28,14 +28,10 @@ jobs:
       - name: Run extraction script
         run: python enevtsextract.py
       
-      - name: Aggiungi il file generato al commit
+      - name: Commit and push if changes
         run: |
-          git config --global user.name "GitHub Actions"
-          git config --global user.email "actions@github.com"
+          git config --global user.name 'GitHub Actions Bot'
+          git config --global user.email 'actions@github.com'
           git add .
-          git commit -m "Aggiungi file generato daddyliveSchedule"
-        continue-on-error: true  # In caso non ci siano cambiamenti, non fallire
-
-      - name: Pusha il cambiamento
-        run: git push
-        if: success()  # Esegui solo se il commit è riuscito
+          git status
+          git diff --quiet && git diff --staged --quiet || (git commit -m "Update schedule data [skip ci]" && git push)
