--- a/.github/workflows/eventsextract.yml
+++ b/.github/workflows/eventsextract.yml
@@ -34,5 +34,4 @@ jobs:
           git config --global user.email 'actions@github.com'
           git add .
           git status
-          git diff --quiet && git diff --staged --quiet || (git commit -m "Update schedule data [skip ci]" && git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git)
-  
+          git diff --quiet && git diff --staged --quiet || (git commit -m "Update schedule data [skip ci]" && git push https://x-access-token:${{ secrets.PAT_TOKEN }}@github.com/${{ github.repository }}.git)
