--- a/.github/workflows/eventsextract.yml
+++ b/.github/workflows/eventsextract.yml
@@ -3,35 +3,36 @@ name: Extract Schedule Data
 on:
   schedule:
     - cron: '45 */3 * * *'  # Esegui ogni 3 ore
-  workflow_dispatch:  # Consente l'esecuzione manuale
+  workflow_dispatch:  # Permette di eseguire manualmente il flusso di lavoro
 
 jobs:
-  extract-data:
+  extract_schedule:
     runs-on: ubuntu-latest
-    
+
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-      
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.10'
-      
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install playwright
-          pip install bs4
-          playwright install chromium
-      
-      - name: Run extraction script
-        run: python enevtsextract.py
-      
-      - name: Commit and push if changes
-        run: |
-          git config --global user.name 'GitHub Actions Bot'
-          git config --global user.email 'actions@github.com'
-          git add .
-          git status
-          git diff --quiet && git diff --staged --quiet || (git commit -m "Aggiungi file generato combined_playlist" && git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git)
+    - name: Checkout repository
+      uses: actions/checkout@v2
+
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.8'
+
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install playwright beautifulsoup4
+
+    - name: Install Playwright dependencies
+      run: |
+        python -m playwright install
+
+    - name: Run script
+      run: python eventsextract.py
+
+    - name: Commit and push JSON file (if any)
+      run: |
+        git add daddyliveSchedule.json
+        git commit -m "Update schedule data"
+        git push
+      if: success() && steps.run-script.outputs.json-file-modified == 'true'
