--- a/.github/workflows/eventsextract.yml
+++ b/.github/workflows/eventsextract.yml
@@ -46,7 +46,7 @@ jobs:
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
-          git add .
+          git add daddyliveSchedule.json
         continue-on-error: true  # In caso non ci siano cambiamenti, non fallire
 
       - name: Pusha il cambiamento
