--- a/.github/workflows/eventsextract.yml
+++ b/.github/workflows/eventsextract.yml
@@ -33,7 +33,7 @@ jobs:
           git config --global user.name 'GitHub Actions Bot'
           git config --global user.email 'actions@github.com'
           # Add both HTML and JSON files
-          git add daddyliveSchedule.json
+          git add main_schedule_container.html daddyliveSchedule.json
           # Ignore screenshot files
           git status
           git diff --quiet && git diff --staged --quiet || (git commit -m "Update schedule data [skip ci]" && git push)
