--- a/.github/workflows/epg.yml
+++ b/.github/workflows/epg.yml
@@ -1,8 +1,9 @@
-name: Esegui epg.py ogni 3 ore
+
+name: Esegui epg.py ogni 4 ore
 
 on:
   schedule:
-    - cron: '45 */3 * * *'  # Esegue ogni 3 ore al minuto 45
+    - cron: '45 */3 * * *'  # Esegue ogni ora
   workflow_dispatch:  # Permette di eseguire manualmente
 
 permissions:
@@ -21,28 +22,40 @@ jobs:
           python-version: '3.x'  # Sostituisci con la versione necessaria
 
       - name: Installa le dipendenze
-        run: pip install requests  # xml.etree.ElementTree è parte della libreria standard
+        run: pip install requests
 
       - name: Esegui lo script
         run: python epg.py
 
-      - name: Verifica se epg.xml e epg.gzip sono stati generati
+      - name: Verifica se epg.m3u8 è stato generato
         run: |
-          if [ -f "epg.xml" ] && [ -f "epg.gzip" ]; then
-            echo "File epg.xml e epg.gzip generati correttamente."
+          if [ -f "epg.m3u8" ]; then
+            echo "Il file epg.m3u8 è stato generato."
           else
-            echo "Uno o entrambi i file non esistono. Esco."
+            echo "Il file epg.m3u8 non esiste. Esco."
             exit 0  # Esci senza fare commit o push
           fi
 
-      - name: Aggiungi i file generati al commit
+      - name: Configura Git
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
-          git add epg.xml epg.gzip
-          git commit -m "Aggiornamento epg.xml e epg.gzip"
-        continue-on-error: true  # Evita errori se non ci sono modifiche
+
+      - name: Stash delle modifiche locali (se presenti)
+        run: |
+          git diff --quiet || git stash
+
+      - name: Scarica le ultime modifiche dal repository remoto
+        run: git pull --rebase origin main
+
+      - name: Ripristina le modifiche stashed (se presenti)
+        run: |
+          git stash list | grep -q "stash@{0}" && git stash pop || echo "Nessuna modifica da ripristinare"
+
+      - name: Aggiungi il file generato al commit
+        run: |
+          git add .
+          git commit -m "Aggiungi file generato epg" || echo "Nessuna modifica da commitare"
 
       - name: Pusha il cambiamento
         run: git push
-        if: success()  # Esegui solo se il commit è riuscito
