--- a/.github/workflows/eventsextract.yml
+++ b/.github/workflows/eventsextract.yml
@@ -21,6 +21,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
+          pip install beautifulsoup4
           pip install playwright
           pip install bs4
           playwright install chromium
