--- a/.github/workflows/eventsextract.yml
+++ b/.github/workflows/eventsextract.yml
@@ -24,6 +24,7 @@ jobs:
           pip install beautifulsoup4
           pip install playwright
           pip install bs4
+          pip install lxml
           playwright install chromium
       
       - name: Run extraction script
